# us-counties

./: .gitignore  LICENSE  README.md  pyproject.toml
uscounties/: __init__.py  cb_1990_us_county.parquet  cb_2000_us_county.parquet  cb_2010_us_county.parquet  cb_2013_us_county.parquet  cb_2014_us_county.parquet  cb_2015_us_county.parquet  cb_2019_us_county.parquet  cb_2020_us_county.parquet  cb_2021_us_county.parquet  cb_2022_us_county.parquet  countylist.py  state_lookup.parquet
